# electrs

./: .gitignore  Cargo.toml
crates/ordinals/: Cargo.toml
crates/ordinals/src/: charm.rs  lib.rs  runestone.rs
crates/ordx/: Cargo.toml
crates/ordx/sql/: init.sql  pragma.sql
crates/ordx/src/: cache.rs  chain.rs  db.rs  entry.rs  lib.rs  lot.rs  main.rs  rpc.rs  settings.rs  updater.rs
crates/ordx/src/api/: compat.rs  dto.rs  error.rs  handler.rs  mod.rs  util.rs  vo.rs
crates/ordx/src/db/: mod.rs  model.rs
docker/ordx/: Dockerfile
src/: daemon.rs
tests/: electrum.rs
