[package]
name = "ordx"
version = "0.1.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinals = { path = "../ordinals" }
rocksdb = "0.22.0"
serde = "1.0.203"
serde_derive = "1.0.203"
bitcoin = { version = "0.31", features = ["serde", "base64", "rand"] }
itertools = "0.13.0"
anyhow = "1.0.86"
bitcoincore-rpc = "0.18"
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
config = "0.14.0"
log = "0.4.22"
bincode = "1.3.3"
env_logger = "0.11.3"
serde_json = "1.0.120"
chrono = "0.4.38"
axum = { version = "0.7.5", features = ["http2"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "catch-panic", "tokio"] }
tower_governor = "0.4.2"
forwarded-header-value = "0.1.1"
http-body-util = "0.1.2"
hex = "0.4.3"
base64 = "0.22.1"
ctrlc = { version = "3.4.4", features = ["termination"] }

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
anyhow = "^1"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"