[package]
name = "ordx"
version = "0.1.6"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordinals = { path = "../ordinals" }
rocksdb = "0.22.0"
serde = { version = "1", features = ['derive'] }
bitcoin = { version = "0.31", features = ["serde", "base64", "rand"] }
itertools = "0.13.0"
anyhow = "1.0.86"
bitcoincore-rpc = "0.18"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
config = "0.14.0"
log = "0.4.22"
bincode = "1.3.3"
env_logger = "0.11"
serde_json = "1.0.120"
chrono = "0.4.38"
axum = { version = "0.7.5", features = ["http2"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "catch-panic", "tokio"] }
tower_governor = "0.4.2"
forwarded-header-value = "0.1.1"
http-body-util = "0.1.2"
hex = "0.4.3"
base64 = "0.22.1"
ctrlc = { version = "3.4.4", features = ["termination"] }
fs_extra = "1.3.0"
moka = { version = "0.12.8", features = ["future"] }
duckdb = { version = "1.0.0", features = ["bundled", "r2d2"] }
r2d2 = "0.8.10"
sea-query = { version = "0.30.7", features = ["backend-postgres"] }

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
anyhow = "^1"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
#panic = "abort"